--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -1,3 +1,4 @@
+  <div class="row">
   <div class="col-md-6">
     <h2>Signup</h2>
     <form class="form signup-form">
@@ -18,3 +19,6 @@
       </div>
     </form>
   </div>
+  </div>
+
+  <script src="./js/signUp.js"></script>
