Added Login to mainpage if not logged in

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,20 +22,27 @@
         <a href="/profile">profile</a> |
         <button class="no-button" id="logout">logout</button>
         {{else}}
+
         <a href="/login">login</a>
-        <a href="/signUp">sign up</a>
+        <a href="/signUp">sign </a>
         {{/if}}
       </nav>
     </header>
     <main class="container container-fluid mt-5">
       <!-- Render the sub layout -->
+      {{#if logged_in}}
       {{{ body }}}
+      {{else}}
+      {{> loginHome}}
+      {{/if}}
     </main>
   </div>
 
   <!-- Render script for logged in users only -->
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
+  {{else}}
+  <script src="./js/login.js"></script>
   {{/if}}
 </body>
 
