Fixed landing page

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,8 @@
 <!-- Loop over each object in the projects array -->
-{{#each projects as |project| }}
+<p>Homepage</p>
+<p>This is where we will loop through the most recent 5 posts</p>
+
+{{!-- {{#each projects as |project| }}
 <div class="row mb-4 project">
   <div class="col-md-5">
     <h2>
@@ -21,4 +24,4 @@
     </p>
   </div>
 </div>
-{{/each}}
+{{/each}} --}}
