--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,29 @@
 <!-- Loop over each object in the projects array -->
+<div class="row">
+  <div class="col-md-6">
+    <h2>Login</h2>
+
+    <form class="form login-form">
+      <div class="form-group">
+        <label for="email-login">email:</label>
+        <input class="form-input" type="text" id="email-login" />
+      </div>
+      <div class="form-group">
+        <label for="password-login">password:</label>
+        <input class="form-input" type="password" id="password-login" />
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">login</button>
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit"><a href="/signUp">sign up</a></button>
+      </div>
+    </form>
+  </div>
+</div>
+
+<script src="./js/login.js"></script>
+
 {{#each posts as |post|}}
 <h2>{{post.title}}</h2>
 <p>{{post.image}}</p>
