changing styling madness

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,22 +1,22 @@
 <!-- Loop over each object in the projects array -->
 <div class="row">
   <div class="col-md-6">
-    <h2>Login</h2>
+    <h2>LOGIN</h2>
 
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">email:</label>
+        <label for="email-login">EMAIL:</label>
         <input class="form-input" type="text" id="email-login" />
       </div>
       <div class="form-group">
-        <label for="password-login">password:</label>
+        <label for="password-login">PASSWORD:</label>
         <input class="form-input" type="password" id="password-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+        <button class="btn btn-primary" type="submit">LOGIN</button>
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit"><a href="/signUp">sign up</a></button>
+        <button class="btn btn-primary" type="submit"><a href="/signUp">SIGN UP</a></button>
       </div>
     </form>
   </div>
