--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,27 +4,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fund My Project!</title>
-  <link rel="stylesheet" href="/css/jass.css">
+  <title>GREEN GUARDIAN</title>
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
-      <h1>
+      <h1 class="homepage-header">
         <span role="img" aria-label="money">💸</span>
-        <a href="/">Fund My Project!</a>
+        <a href="/">GREEN GUARDIAN</a>
       </h1>
       <nav>
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
-        <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
+        <a href="/profile">PROFILE</a> |
+        <button class="no-button" id="logout">LOGOUT</button>
         {{else}}
 
-        <a href="/login">login</a>
-        <a href="/signUp">sign up</a>
+        <a href="/login">LOGIN</a>
+        <a href="/signUp">SIGN UP</a>
         {{/if}}
       </nav>
     </header>
