--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,15 @@
+* {
+  font-family: 'Montserrat', sans-serif;
+}
+
+
+
 header, .project:not(:last-child) {
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid black;
+}
+
+.homepage-header h1 {
+  color: black;
 }
 
 .no-button {
@@ -7,18 +17,17 @@ header, .project:not(:last-child) {
   border: none;
   padding: 0;
   cursor: pointer;
-  color: #1b89bc;
+  color: black;
   text-decoration: none;
   font-size: 100%;
 }
 
 .no-button:hover {
-  color: #065b83;
-  text-decoration: underline;
+  color:black;
 }
 
 .dollar-amount {
-  color: #056605;
+  color: black;
   font-weight: bold;
   margin-left: -5px;
 }
