--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -14,8 +14,8 @@
         <label for="password-signup">password:</label>
         <input class="form-input" type="password" id="password-signup" />
       </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
+      <div class="form-group  signup-form">
+        <button class="btn btn-primary"  type="submit">signup</button>
       </div>
     </form>
   </div>
