--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -15,10 +15,24 @@
         <input class="form-input" type="password" id="password-signup" />
       </div>
       <div class="form-group  signup-form">
-        <button class="btn btn-primary"  type="submit">signup</button>
+        <button class="btn btn-primary" id="myBtn" type="submit">signup</button>
       </div>
     </form>
   </div>
   </div>
+
+  <!-- Trigger/Open The Modal -->
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>You have successfully signed up!</p>
+  </div>
+
+</div>
+
 
   <script src="./js/signUp.js"></script>
