--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -23,6 +23,8 @@
     </form>
   </div>
 </div>
+
+
 {{/if}}
 
 <script src="./js/login.js"></script>
@@ -34,6 +36,11 @@
 
 <p>Created by {{post.user.username}}</p>
 {{/each}}
+
+<button id="upload_widget" class="cloudinary-button">UPLOAD PHOTO</button>
+  <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
+  <script src="/js/widget.js">
+  </script>
 
 {{!-- {{#each projects as |project| }}
 <div class="row mb-4 project">
