Added in Basic inputs into Handlebars

--- a/views/allposts.handlebars
+++ b/views/allposts.handlebars
@@ -1,3 +1,8 @@
+<input type="text" name="" id="titleInp">
+<input type="text" name="" id="descInp">
+<p>Image</p>
+<button id="postBtn">Post</button>
+
 {{#each posts as |post|}}
 <h2>{{post.title}}</h2>
 <p>{{post.image}}</p>
