--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -15,7 +15,7 @@
         <input class="form-input" type="password" id="password-signup" />
       </div>
       <div class="form-group  signup-form">
-        <button class="btn btn-primary" id="myBtn" type="submit">signup</button>
+        <button class="btn btn-primary" id="modalBtn" type="submit">signup</button>
       </div>
     </form>
   </div>
