--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,11 +2,16 @@
   font-family: 'Montserrat', sans-serif;
 }
 
-
+body {
+  background-image: url("monsterrawall.png");
+  background-color: #cccccc;
+  background-repeat: no-repeat;
+  /* background-size: cover; */
+}
 
 .navbar {
   border-bottom: 1px solid black;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.782)
 }
 
 .homepage-header a {
@@ -24,14 +29,11 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-
 }
 
 .nav-items a {
   color: black;
   text-decoration: none;
-}
-
   font-weight: bold;
   margin-left: -5px;
 }
