--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<head lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -8,9 +8,8 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400&display=swap" rel="stylesheet"></head>
 </head>
-
 <body>
   <div>
     <header class="navbar">
