--- a/views/allposts.handlebars
+++ b/views/allposts.handlebars
@@ -3,6 +3,11 @@
 <p>Image</p>
 <button id="postBtn">Post</button>
 
+<button id="upload_widget" class="cloudinary-button">UPLOAD PHOTO</button>
+<script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
+<script src="/js/widget.js">
+</script>
+
 {{#each posts as |post|}}
 <h2>{{post.title}}</h2>
 <p>{{post.image}}</p>
