--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -24,7 +24,7 @@
   </div>
 </div>
 
-
+<h3 class="recents">RECENT POSTS</h3>
 {{/if}}
 
 <script src="./js/login.js"></script>
@@ -32,17 +32,12 @@
 {{#each posts as |post|}}
 <div class="homepage-posts">
   <h2 class="homepage-posts-titles">{{post.title}}</h2>
-<p class="homepage-posts-images">{{post.image}}</p>
-<p class="homepage-posts-descriptions">{{post.description}}</p>
+  <p class="homepage-posts-images">{{post.image}}</p>
+  <p class="homepage-posts-descriptions">{{post.description}}</p>
 
-<p class="homepage-posts-users">Created by {{post.user.username}}</p>
+  <p class="homepage-posts-users">Created by {{post.user.username}}</p>
 </div>
 {{/each}}
-
-<button id="upload_widget" class="cloudinary-button">UPLOAD PHOTO</button>
-  <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
-  <script src="/js/widget.js">
-  </script>
 
 {{!-- {{#each projects as |project| }}
 <div class="row mb-4 project">
