--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,17 +52,19 @@ body {
 
 .homepage-posts {
   background-color: rgba(255, 255, 255, 0.782);
-  margin: 10px;
+  margin: 20px 0 10px 0;
   padding: 5px;
-  max-width: 90%;
+  text-align: center;
+  max-width: 90%;  
 }
 
 .row {
   background-color: rgba(255, 255, 255, 0.782);
-  margin: 10px;
+  margin: 70px;
   padding: 5px;
   max-width:40%;
   font-weight: 300;
+  align-content: center;
 }
 
 
