--- a/views/allposts.handlebars
+++ b/views/allposts.handlebars
@@ -12,17 +12,12 @@
     <form class="card-body new-post-form" id="new-post-form">
         <label for="post-title" class="form-label">Title</label>
         <input type="text" id="titleInp" name="post-title" class="form-input" />
-
-
         <label class="form-label" for="content">Description</label>
-        <input name="content" class="form-input" id="descInp"/>
-
+        <input name="content" class="form-input" id="descInp" />
         <button type="submit" class="btn" id="postBtn">Create</button>
     </form>
-        <button id="upload_widget" class="cloudinary-button">UPLOAD PHOTO</button>
+    <button id="upload_widget" class="cloudinary-button">UPLOAD PHOTO</button>
 </div>
-
-
 
 {{#each posts as |post|}}
 <h2>{{post.title}}</h2>
@@ -33,6 +28,5 @@
 {{/each}}
 
 <script src="./js/post.js"></script>
-        <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
-        <script src="/js/widget.js">
-        </script>
+<script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+<script src="/js/widget.js"></script>
