testing img rendering

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,7 +55,7 @@ body {
   margin: 20px 0 10px 0;
   padding: 5px;
   text-align: center;
-  max-width: 90%;  
+  max-width: 90%;
 }
 
 .row {
@@ -67,10 +67,13 @@ body {
   align-content: center;
 }
 
-
 .row h2 {
   text-align: center;
   font-weight: 300;
+}
+
+.home-card {
+  background-color: rgba(255, 255, 255, 0.782);
 }
 
 
