--- a/views/allposts.handlebars
+++ b/views/allposts.handlebars
@@ -7,7 +7,7 @@
 
 
 
-<div class="card">
+<div class="home-card">
     <h3 class="card-header">Create New Post</h3>
     <form class="card-body new-post-form" id="new-post-form">
         <label for="post-title" class="form-label">Title</label>
