--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -52,6 +52,8 @@
 {{/each}}
 
 <script src="./js/post.js"></script>
+<script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+<script src="/js/widget.js"></script>
 {{!-- {{#each projects as |project| }}
 <div class="row mb-4 project">
   <div class="col-md-5">
