--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
         {{/if}}
       </nav>
     </header>
-    <main class="login-container">
+    <main>
 
       <!-- Render the sub layout -->
       {{{ body }}}
