--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -28,11 +28,13 @@
         <br/>
         <input class="form-input" type="password" id="password-login" />
       </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">LOGIN</button>
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit"><a href="/signUp">SIGN UP</a></button>
+      <div class="buttons">
+        <div class="form-group">
+          <button class="btn-login" type="submit">LOGIN</button>
+        </div>
+        <div class="form-group">
+          <button class="btn-signup" type="submit"><a href="/signUp">SIGN UP</a></button>
+        </div>
       </div>
     </form>
   </div>
