--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -52,7 +52,7 @@
     <p class="homepage-posts-images">{{post.image}}</p>
     <p class="homepage-posts-descriptions">{{post.description}}</p>
 
-    <p class="homepage-posts-users">Created by {{post.user.username}}</p>
+    <p class="homepage-posts-users"><i>created by: </i> {{post.user.username}}</p>
   </div>
 </div>
 {{/each}}
