--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,10 +9,10 @@ body {
   background-color: #cccccc;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100vh;
 }
 
 .navbar {
-  /* border-bottom: 2px solid black; */
   background-color: rgba(255, 255, 255, 0.782);
   display: flex;
   flex-direction: column;
@@ -50,6 +50,8 @@ body {
 .recents {
   text-align: center;
   color: rgba(255, 255, 255, 0.782);
+  min-width: 90%;
+  font-weight: 300;
 }
 
 .recent-posts {
@@ -65,7 +67,7 @@ body {
   margin: 20px 0 10px 0;
   padding: 5px;
   text-align: center;
-  max-width: 90%;
+  min-width: 90%;
 }
 
 .row {
@@ -81,7 +83,7 @@ body {
   background-color: rgba(255, 255, 255, 0.782);
   margin: 50px;
   padding: 10px 60px 10px 60px;
-  max-width:40%;
+  max-width:50%;
   font-weight: 300;
   border-radius: 1px;
 }
@@ -121,15 +123,21 @@ body {
   background-color: rgba(255, 255, 255, 0.782);
 }
 
+
+
 .form-group button {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.552);
   color: rgba(255, 255, 255, 0.782);
+  border: none;
 }
 
 .buttons button:hover {
-  background-color: rgba(0, 0, 0, 0.621);
+  background-color: rgb(0, 0, 0);
 }
 
+.nav-items a:hover {
+  border: solid black 1px;
+}
 
 
 
