--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
         <a href="/profile">PROFILE</a>
-        <button class="no-button" id="logout">LOGOUT</button>
+        <button class="logout-button" id="logout">LOGOUT</button>
         {{else}}
 
         <a href="">HOME</a>
