--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,15 +1,20 @@
 <!-- Loop over each object in the projects array -->
 {{#if logged_in}}
 <div class="home-card">
-    <h3 class="card-header">Create New Post</h3>
+    <h3 class="card-header">CREATE NEW POST</h3>
     <form class="card-body new-post-form" id="new-post-form">
-        <label for="post-title" class="form-label">Title</label>
+        <label for="post-title" class="form-label">TITLE: </label>
+        <br/>
         <input type="text" id="titleInp" name="post-title" class="form-input" />
-        <label class="form-label" for="content">Description</label>
+        <br/>
+        <label class="form-label" for="content">DESCRIPTION: </label>
+        <br/>
         <input name="content" class="form-input" id="descInp" />
-        <button type="submit" class="btn" id="postBtn">Create</button>
+        <br/>
+        <button id="upload_widget" class="cloudinary-button">UPLOAD PHOTO</button>
+
+        <button type="submit" class="btn" id="postBtn">POST</button>
     </form>
-    <button id="upload_widget" class="cloudinary-button">UPLOAD PHOTO</button>
 </div>
 
 {{else}}
