--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -1,21 +1,21 @@
   <div class="row">
   <div class="col-md-6">
-    <h2>Signup</h2>
+    <h2>SIGN UP</h2>
     <form class="form signup-form">
       <div class="form-group">
-        <label for="email-signup">email:</label>
+        <label for="email-signup">EMAIL:</label>
         <input class="form-input" type="text" id="email-signup" />
       </div>
       <div class="form-group">
-        <label for="name-signup">name:</label>
+        <label for="name-signup">NAME:</label>
         <input class="form-input" type="text" id="name-signup" />
       </div>
       <div class="form-group">
-        <label for="password-signup">password:</label>
+        <label for="password-signup">PASSWORD:</label>
         <input class="form-input" type="password" id="password-signup" />
       </div>
       <div class="form-group  signup-form">
-        <button class="btn btn-primary" id="modalBtn" type="submit">signup</button>
+        <button class="btn btn-primary" id="modalBtn" type="submit">SIGNUP</button>
       </div>
     </form>
   </div>
@@ -29,7 +29,7 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">&times;</span>
-    <p>You have successfully signed up!</p>
+    <p>THANKS FOR SIGNING UP!</p>
   </div>
 
 </div>
