Added Link to All posts handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
       <nav class="nav-items">
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
-        <a href="/profile">PROFILE</a>
+        <a href="/posts">ALL POSTS</a>
         <button class="no-button" id="logout">LOGOUT</button>
         {{else}}
 
