--- a/views/allposts.handlebars
+++ b/views/allposts.handlebars
@@ -1,8 +1,39 @@
 
-{{#each posts as |post|}}
-<h2>{{post.title}}</h2>
-<p>{{post.image}}</p>
-<p>{{post.description}}</p>
+<!-- Loop over each object in the projects array -->
+<div class="home-card">
+    <h3 class="card-header">CREATE NEW POST</h3>
+    <form class="card-body new-post-form" id="new-post-form">
+        <label for="post-title" class="form-label">TITLE: </label>
+        <br/>
+        <input type="text" id="titleInp" name="post-title" class="form-input" />
+        <br/>
+        <label class="form-label" for="content">DESCRIPTION: </label>
+        <br/>
+        <input name="content" class="form-input" id="descInp" />
+        <br/>
+        <button id="upload_widget" class="cloudinary-button">UPLOAD PHOTO</button>
 
-<p>Created by {{post.user.username}}</p>
+        <button type="submit" class="btn" id="postBtn">POST</button>
+    </form>
+</div>
+
+
+<h3 class="recents">RECENT POSTS</h3>
+
+<script src="./js/login.js"></script>
+
+{{#each posts as |post|}}
+<div class="recent-posts">
+  <div class="homepage-posts">
+    <h2 class="homepage-posts-titles">{{post.title}}</h2>
+    <p class="homepage-posts-images">{{post.image}}</p>
+    <p class="homepage-posts-descriptions">{{post.description}}</p>
+
+    <p class="homepage-posts-users"><i>created by: </i> {{post.user.username}}</p>
+  </div>
+</div>
 {{/each}}
+
+<script src="./js/post.js"></script>
+<script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+<script src="/js/widget.js"></script>
