--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
         <button class="logout-button" id="logout">LOGOUT</button>
         {{else}}
 
-        <a href="">HOME</a>
+        <a href="/">HOME</a>
         <a href="/login">LOGIN</a>
         <a href="/signUp">SIGN UP</a>
         {{/if}}
