--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -60,6 +60,8 @@
     <p class="homepage-posts-users"><i>created by: </i> {{post.user.username}}</p>
   </div>
 </div>
+{{log post}}
+{{log post.advice.id}}
 {{/each}}
 
 <script src="./js/post.js"></script>
