--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url("plantroom4.png");
+  background-image: url("../images/plantroom4.png");
   background-color: #cccccc;
   background-repeat: no-repeat;
   background-size: cover;
