--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -58,10 +58,13 @@
     <p class="homepage-posts-descriptions">{{post.description}}</p>
 
     <p class="homepage-posts-users"><i>created by: </i> {{post.user.username}}</p>
+      <h4>Advice:</h4>
+    {{#each post.advice}}
+    <p>{{advice}}</p>
+    {{/each}}
   </div>
 </div>
-{{log post}}
-{{log post.advice.id}}
+
 {{/each}}
 
 <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
