--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,11 +9,12 @@ body {
   background-color: #cccccc;
   background-repeat: no-repeat;
   background-size: cover;
+  background-repeat: repeat-y;
   height: 100vh;
 }
 
 .navbar {
-  background-color: rgba(255, 255, 255, 0.907);
+  background-color: rgba(255, 255, 255, 0.925);
   display: flex;
   flex-direction: column;
   padding-bottom: 5px;
@@ -57,7 +58,7 @@ body {
 
 .recents {
   text-align: center;
-  color: rgba(255, 255, 255, 0.907);
+  color: rgba(255, 255, 255, 0.925);
   min-width: 90%;
   font-weight: 300;
 }
@@ -71,11 +72,11 @@ body {
 }
 
 .homepage-posts {
-  background-color: rgba(255, 255, 255, 0.907);
+  background-color: rgba(255, 255, 255, 0.925);
   margin: 20px 0 10px 0;
   padding: 5px;
   text-align: center;
-  min-width: 90%;
+  max-width: 90%;
 }
 
 .row {
@@ -88,7 +89,7 @@ body {
 
 .login-form-container {
   align-content: center;
-  background-color: rgba(255, 255, 255, 0.907);
+  background-color: rgba(255, 255, 255, 0.925);
   margin: 50px;
   padding: 10px 60px 10px 60px;
   max-width:50%;
@@ -124,11 +125,11 @@ body {
 .buttons a {
   margin: 10px;
   text-decoration: none;
-  color: rgba(255, 255, 255, 0.907);
+  color: rgba(255, 255, 255, 0.925);
 }
 
 .home-card {
-  background-color: rgba(255, 255, 255, 0.907);
+  background-color: rgba(255, 255, 255, 0.925);
 }
 
 .home-card .cloudinary-button {
@@ -139,7 +140,7 @@ body {
 
 .form-group button {
   background-color: rgba(0, 0, 0, 0.552);
-  color: rgba(255, 255, 255, 0.782);
+  color: rgba(255, 255, 255, 0.85);
   border: none;
 }
 
