--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -48,8 +48,6 @@
 <h3 class="recents">RECENT POSTS</h3>
 {{/if}}
 
-<script src="./js/login.js"></script>
-
 {{#each posts as |post|}}
 <div class="recent-posts">
   <div class="homepage-posts">
@@ -65,7 +63,11 @@
 {{/each}}
 
 <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+
+{{#if logged_in}}
 <script src="./js/post.js"></script>
+{{else}}
+{{/if}}
 {{!-- {{#each projects as |project| }}
 <div class="row mb-4 project">
   <div class="col-md-5">
