--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -52,7 +52,7 @@
 <div class="recent-posts">
   <div class="homepage-posts">
     <h2 class="homepage-posts-titles">{{post.title}}</h2>
-    <p class="homepage-posts-images">{{post.image}}</p>
+    <img src="{{post.image}}">
     <p class="homepage-posts-descriptions">{{post.description}}</p>
 
     <p class="homepage-posts-users"><i>created by: </i> {{post.user.username}}</p>
