--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,22 +1,25 @@
 <!-- Loop over each object in the projects array -->
 {{#if logged_in}}
-<div class="home-card">
-    <h3 class="card-header">CREATE NEW POST</h3>
-    <form class="card-body new-post-form" id="new-post-form">
-        <label for="post-title" class="form-label">TITLE: </label>
-        <br/>
-        <input type="text" id="titleInp" name="post-title" class="form-input" />
-        <br/>
-        <label class="form-label" for="content">DESCRIPTION: </label>
-        <br/>
-        <input name="content" class="form-input" id="descInp" />
-        <br/>
-
-        <button type="submit" class="btn" id="postBtn">POST</button>
-    </form>
-        <button id="upload_widget" class="cloudinary-button">UPLOAD PHOTO</button>
+<div class="new-post-container">
+  <div class="home-card">
+      <h3 class="card-header">CREATE NEW POST</h3>
+      <form class="card-body new-post-form" id="new-post-form">
+          <label for="post-title" class="form-label">TITLE: </label>
+          <br/>
+          <input type="text" id="titleInp" name="post-title" class="form-input" />
+          <br/>
+          <label class="form-label" for="content">DESCRIPTION: </label>
+          <br/>
+          <input name="content" class="form-input" id="descInp" />
+          <br/>
+          <div class="buttons">
+            <button id="upload_widget" class="cloudinary-button">UPLOAD PHOTO</button>
+            <br/>
+            <button type="submit" class="btn" id="postBtn">POST</button>
+          </div>
+      </form>
+  </div>
 </div>
-
 {{else}}
 <div class="row">
   <div class="login-form-container">
@@ -55,8 +58,8 @@
     <img src="{{post.image}}">
     <p class="homepage-posts-descriptions">{{post.description}}</p>
 
-    <p class="homepage-posts-users"><i>created by: </i> {{post.user.username}}</p>
-      <h4>Advice:</h4>
+    <p class="homepage-posts-users">CREATED BY: {{post.user.username}}</p>
+      <h4>ADVICE:</h4>
     {{#each post.advice}}
     <p>{{advice}}</p>
     {{/each}}
