--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,7 @@ body {
   background-size: cover;
   background-repeat: repeat-y;
   height: 100vh;
+  scroll-behavior: smooth;
 }
 
 h3 {
@@ -21,14 +22,15 @@ h3 {
   background-color: rgba(255, 255, 255, 0.925);
   display: flex;
   flex-direction: column;
-  padding-bottom: 5px;
-  padding-top: 15px;
+  padding: 15px 0px 15px 0px;
+  position: fixed;
+  width: 100vw;
 }
 
 .homepage-header {
   text-align: center;
   font-weight: 200;
-  padding: 5px 0 15px 0;
+  padding: 5px 0 15px 0px;
 }
 
 .homepage-header a {
@@ -63,6 +65,7 @@ h3 {
 .recents {
   text-align: center;
   color: rgba(255, 255, 255, 0.925);
+  text-shadow: 4px 4px 4px #000000;
   min-width: 90%;
   font-weight: 300;
 }
@@ -96,6 +99,7 @@ h3 {
   margin: 50px;
   padding: 10px 60px 10px 60px;
   max-width:50%;
+  margin-top: 220px;
   font-weight: 300;
   border-radius: 1px;
 }
@@ -176,7 +180,8 @@ h3 {
 }
 
 .nav-items a:hover {
-  border: solid black 1px;
+  text-shadow: 4px 4px 4px #888888;
+  text-decoration: none;
 }
 
 .home-card .cloudinary-button:hover {
@@ -200,7 +205,7 @@ h3 {
 /* Modal Content/Box */
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 45% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
@@ -220,4 +225,3 @@ h3 {
   text-decoration: none;
   cursor: pointer;
 }
-
