--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@
 }
 
 body {
+  scroll-behavior: smooth;
   margin: 0;
   padding: 0;
   background-image: url("../images/plantroom4.png");
@@ -11,7 +12,6 @@ body {
   background-size: cover;
   background-repeat: repeat-y;
   height: 100vh;
-  scroll-behavior: smooth;
 }
 
 h3 {
@@ -23,7 +23,6 @@ h3 {
   display: flex;
   flex-direction: column;
   padding: 15px 0px 15px 0px;
-  position: fixed;
   width: 100vw;
 }
 
@@ -64,10 +63,8 @@ h3 {
 
 .recents {
   text-align: center;
-  color: rgba(255, 255, 255, 0.925);
-  text-shadow: 4px 4px 4px #000000;
-  min-width: 90%;
-  font-weight: 300;
+  color: white;
+  font-weight: 400;
 }
 
 .recent-posts {
@@ -86,6 +83,25 @@ h3 {
   max-width: 90%;
 }
 
+.homepage-posts-titles {
+  font-weight: 200;
+  margin-top: 10px;
+}
+
+.recent-posts .title {
+  font-size: 30px;
+  font-weight: 200;
+}
+
+.recent-posts .homepage-posts-descriptions, .homepage-posts-users {
+  font-size: 15px;
+}
+
+.qs-and-as {
+  font-size: 15px;
+  font-weight: 600;
+}
+
 .row {
   display: flex;
   flex-direction: column;
@@ -98,13 +114,25 @@ h3 {
   background-color: rgba(255, 255, 255, 0.925);
   margin: 50px;
   padding: 10px 60px 10px 60px;
-  max-width:50%;
-  margin-top: 220px;
+  max-width: 50%;
+  margin-top: 80px;
   font-weight: 300;
   border-radius: 1px;
 }
 
-.login-form-container h2 {
+.login-page-form {
+  background-color: rgba(255, 255, 255, 0.925);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  align-items: stretch;
+  padding: 30px 50px 30px 50px;
+  margin-top: 80px;
+  max-width: 40%;
+}
+
+.login-form-container h2, .login-page-form h2 {
   text-align: center;
   font-weight: 300;
   padding: -10px;
@@ -141,7 +169,7 @@ h3 {
   flex-wrap: wrap;
   align-content: center;
   align-items: stretch;
-  margin: 50px;
+  margin-top: 250px;
   padding: 10px 60px 10px 60px;
 }
 
@@ -200,12 +228,13 @@ h3 {
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  text-align: center;
 }
 
 /* Modal Content/Box */
 .modal-content {
   background-color: #fefefe;
-  margin: 45% auto; /* 15% from the top and centered */
+  margin: 25% auto; /* 25% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
