--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,18 +1,20 @@
-<div class="row">
-  <div class="col-md-6">
-    <h2>LOGIN</h2>
-    <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">EMAIL:</label>
-        <input class="form-input" type="text" id="email-login" />
-      </div>
-      <div class="form-group">
-        <label for="password-login">PASSWORD:</label>
-        <input class="form-input" type="password" id="password-login" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">LOGIN</button>
-      </div>
-    </form>
+<div class="login-page-form">
+  <div class="row">
+    <div class="col-md-6">
+      <h2>LOGIN</h2>
+      <form class="form login-form">
+        <div class="form-group">
+          <label for="email-login">EMAIL:</label>
+          <input class="form-input" type="text" id="email-login" />
+        </div>
+        <div class="form-group">
+          <label for="password-login">PASSWORD:</label>
+          <input class="form-input" type="password" id="password-login" />
+        </div>
+        <div class="form-group">
+          <button class="btn btn-primary" type="submit">LOGIN</button>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
