--- a/views/allposts.handlebars
+++ b/views/allposts.handlebars
@@ -1,6 +1,5 @@
 <!-- Loop over each object in the projects array -->
 <h3 class="recents">ALL POSTS</h3>
-<script src="./js/login.js"></script>
 {{#each posts as |post|}}
 <div class="recent-posts">
   <div class="homepage-posts">
@@ -13,12 +12,7 @@
     <p>{{advice}}</p>
     {{/each}}
     {{log post}}
-
+    <button id="addAdvice">GIVE ADVICE</button>
   </div>
 </div>
-
 {{/each}}
-
-<script src="./js/post.js"></script>
-<script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
-<script src="/js/widget.js"></script>
