Added basic advicejs

--- a/views/allposts.handlebars
+++ b/views/allposts.handlebars
@@ -12,7 +12,10 @@
     <p>{{advice}}</p>
     {{/each}}
     {{log post}}
+    <div id="addAdviceDiv">
+    <input type="text" id="adviceInp">
     <button id="addAdvice">GIVE ADVICE</button>
+    </div>
   </div>
 </div>
 {{/each}}
