--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -1,26 +1,27 @@
-<div class="row">
-  <div class="col-md-6">
-    <h2>SIGN UP</h2>
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="email-signup">EMAIL:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="name-signup">NAME:</label>
-        <input class="form-input" type="text" id="name-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">PASSWORD:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group  signup-form">
-        <button class="btn btn-primary" id="modalBtn" type="submit">SIGNUP</button>
-      </div>
-    </form>
+<div class="sign-up-form">
+  <div class="row-signup">
+    <div class="col-md-6">
+      <h2>SIGN UP</h2>
+      <form class="form signup-form">
+        <div class="form-group">
+          <label for="email-signup">EMAIL:</label>
+          <input class="form-input" type="text" id="email-signup" />
+        </div>
+        <div class="form-group">
+          <label for="name-signup">NAME:</label>
+          <input class="form-input" type="text" id="name-signup" />
+        </div>
+        <div class="form-group">
+          <label for="password-signup">PASSWORD:</label>
+          <input class="form-input" type="password" id="password-signup" />
+        </div>
+        <div class="form-group  signup-form">
+          <button class="btn btn-primary" id="modalBtn" type="submit">SIGNUP</button>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
-
 <!-- Trigger/Open The Modal -->
 
 <!-- The Modal -->
