--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <div class="login-page-form">
-  <div class="row">
+  <div class="row-login">
     <div class="col-md-6">
       <h2>LOGIN</h2>
       <form class="form login-form">
