--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -20,7 +20,10 @@
       </form>
   </div>
 </div>
-<h3 class="recents">RECENT POSTS</h3>
+
+<div class="recents-header">
+  <h3 class="recents">RECENT POSTS</h3>
+</div>
 {{else}}
 <div class="row-home">
   <div class="login-form-container">
@@ -49,15 +52,18 @@
   </div>
 </div>
 
-<h3 class="recents">RECENT POSTS</h3>
+<div class="recents-header">
+  <h3 class="recents">RECENT POSTS</h3>
+</div>
 {{/if}}
 
 {{#each posts as |post|}}
 <div class="recent-posts">
   <div class="homepage-posts">
-    <h2 class="qs-and-as">QUESTION:</h2>
+    <h2 class="qs-and-as">SUBJECT:</h2>
     <p class="title">{{post.title}}</p>
     <img src="{{post.image}}">
+    <h2 class="qs-and-as">DESCRIPTION:</h2>
     <p class="homepage-posts-descriptions">{{post.description}}</p>
     <p class="homepage-posts-users"><i>CREATED BY:</i> {{post.user.username}}</p>
       <h4 class="qs-and-as">ADVICE:</h4>
