--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
           <input class="form-input" type="password" id="password-login" />
         </div>
         <div class="form-group">
-          <button class="btn btn-primary" type="submit">LOGIN</button>
+          <button class="login-page-btn" type="submit">LOGIN</button>
         </div>
       </form>
     </div>
