--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -1,6 +1,6 @@
 <div class="sign-up-form">
   <div class="row-signup">
-    <div class="col-md-6">
+    <div class="su-form">
       <h2>SIGN UP</h2>
       <form class="form signup-form">
         <div class="form-group">
@@ -15,8 +15,8 @@
           <label for="password-signup">PASSWORD:</label>
           <input class="form-input" type="password" id="password-signup" />
         </div>
-        <div class="form-group  signup-form">
-          <button class="btn btn-primary" id="modalBtn" type="submit">SIGNUP</button>
+        <div class="signup-page-button">
+          <button class="signbtn" id="modalBtnSU" type="submit">SIGNUP</button>
         </div>
       </form>
     </div>
