--- a/public/css/style.css
+++ b/public/css/style.css
@@ -274,7 +274,7 @@ h3 {
   cursor: pointer;
 }
 
-#modalBtnSU, .login-page-btn {
+#modalBtnSU, .login-page-btn, .adviceBtn {
   background-color: rgba(0, 0, 0, 0.552);
   color: rgba(255, 255, 255, 0.925);
   border: none;
@@ -282,12 +282,16 @@ h3 {
   border-radius: 5px;
 }
 
-#modalBtnSU:hover, .login-page-btn:hover {
+.adviceBtn {
+  margin: 20px;
+}
+
+#modalBtnSU:hover, .login-page-btn:hover, .adviceBtn:hover {
   background-color: black;
   cursor: pointer;
 }
 
-#adviceInp {
+.advice-input {
   width: 50%;
   height: 100px;
   margin: 10px;
