--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,7 @@ body {
   background-size: cover;
   background-repeat: repeat-y;
   height: 100vh;
+  width: 100vw;
 }
 
 main {
@@ -30,7 +31,6 @@ h3 {
   display: flex;
   flex-direction: column;
   padding: 15px 0px 15px 0px;
-  width: 100vw;
 }
 
 .homepage-header {
@@ -41,10 +41,11 @@ h3 {
 
 .homepage-header a {
   color: black;
-  display: inline;
+  display: inline-block;
   text-decoration: none;
   border: solid black 2px;
   padding: 15px 75px 15px 75px;
+  overflow-y: auto;
 }
 
 .nav-items {
@@ -116,16 +117,17 @@ h3 {
   flex-wrap: wrap;
   align-content: center;
   align-items: stretch;
+  max-width: 80%;
 }
 
 .login-form-container {
   background-color: rgba(255, 255, 255, 0.925);
   margin: 50px;
   padding: 10px 60px 10px 60px;
-  max-width: 50%;
   margin-top: 80px;
   font-weight: 300;
   border-radius: 1px;
+  text-align: center;
 }
 
 .login-page-form, .sign-up-form {
@@ -137,7 +139,7 @@ h3 {
   align-items: stretch;
   padding: 30px 50px 30px 50px;
   margin-top: 80px;
-  max-width: 40%;
+  width: 50%;
 }
 
 .login-page-form .form-group, .sign-up-form .su-form {
@@ -155,6 +157,7 @@ h3 {
   margin: 7px;
   width: 200px;
   font-family: 'Montserrat', sans-serif;
+  max-width: 90%;
 }
 
 .buttons {
@@ -191,13 +194,17 @@ h3 {
 
 .home-card {
   background-color: rgba(255, 255, 255, 0.925);
-  min-width: 80%;
-  margin: 50px;
+
   padding: 10px 60px 10px 60px;
-  max-width:50%;
+  min-width: 70%;
   font-weight: 300;
   border-radius: 1px;
   align-items: center;
+  overflow-y: auto;
+}
+
+.recent-posts img {
+  max-width: 90%;
 }
 
 .form-group button, .new-post-container .buttons button {
