--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -4,16 +4,20 @@
       <h2>SIGN UP</h2>
       <form class="form signup-form">
         <div class="form-group">
+          <br/>
           <label for="email-signup">EMAIL:</label>
-          <input class="form-input" type="text" id="email-signup" />
+          <br/>
+          <textarea class="form-input" type="text" id="email-signup"></textarea>
         </div>
         <div class="form-group">
           <label for="name-signup">NAME:</label>
-          <input class="form-input" type="text" id="name-signup" />
+          <br/>
+          <textarea class="form-input" type="text" id="name-signup"></textarea>
         </div>
         <div class="form-group">
           <label for="password-signup">PASSWORD:</label>
-          <input class="form-input" type="password" id="password-signup" />
+          <br/>
+          <textarea class="form-input" type="password" id="password-signup"></textarea>
         </div>
         <div class="signup-page-button">
           <button class="signbtn" id="modalBtnSU" type="submit">SIGNUP</button>
