--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,7 +6,7 @@
       <form class="card-body new-post-form" id="new-post-form">
           <label for="post-title" class="form-label">TITLE: </label>
           <br/>
-          <textarea type="text" id="titleInp" name="post-title" class="form-input"></textarea>
+          <input type="text" id="titleInp" name="post-title" class="form-input"></input>
           <br/>
           <label class="form-label" for="content">DESCRIPTION: </label>
           <br/>
@@ -33,12 +33,12 @@
       <div class="form-group">
         <label for="email-login">EMAIL:</label>
         <br/>
-        <textarea class="form-input" type="text" id="email-login"></textarea>
+        <input class="form-input" type="text" id="email-login"></input>
       </div>
       <div class="form-group">
         <label for="password-login">PASSWORD:</label>
         <br/>
-        <textarea class="form-input" type="password" id="password-login"></textarea>
+        <input class="form-input" type="password" id="password-login"></input>
       </div>
       <div class="buttons">
         <div class="form-group">
