--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -7,17 +7,17 @@
           <br/>
           <label for="email-signup">EMAIL:</label>
           <br/>
-          <textarea class="form-input" type="text" id="email-signup"></textarea>
+          <input class="form-input" type="text" id="email-signup"></input>
         </div>
         <div class="form-group">
           <label for="name-signup">NAME:</label>
           <br/>
-          <textarea class="form-input" type="text" id="name-signup"></textarea>
+          <input class="form-input" type="text" id="name-signup"></input>
         </div>
         <div class="form-group">
           <label for="password-signup">PASSWORD:</label>
           <br/>
-          <textarea class="form-input" type="password" id="password-signup"></textarea>
+          <input class="form-input" type="password" id="password-signup"></input>
         </div>
         <div class="signup-page-button">
           <button class="signbtn" id="modalBtnSU" type="submit">SIGNUP</button>
