--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,42 @@ main {
 h3 {
   text-align: center;
   font-weight: 400;
+  align-items: center;
+}
+
+footer {
+  background-color: rgba(255, 255, 255, 0.925);
+  width: 100vw;
+  padding: 10px;
+  position: relative;
+  margin-top: 30px;
+  font-size: 13px;
+}
+
+footer h4 {
+  font-weight: 300;
+  text-align: center;
+}
+
+.page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+.content-wrap {
+  padding-bottom: 2.5rem;    /* Footer height */
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;            /* Footer height */
 }
 
 .row-signup, .row-login, .row-home  {
@@ -77,7 +113,8 @@ h3 {
   color: rgb(255, 255, 255);
   font-weight: 400;
   margin-bottom: 10px;
-  margin-top: 60px
+  margin-top: 60px;
+  text-shadow: 6px 0px 6px rgba(0, 0, 0, 0.542)
 }
 
 .recent-posts {
@@ -86,6 +123,7 @@ h3 {
   flex-direction: column;
   align-content: center;
   align-items: stretch;
+  margin-bottom: 30px;
 }
 
 .homepage-posts {
@@ -236,6 +274,7 @@ h3 {
 .home-card .cloudinary-button:hover {
   background-color: black;
 }
+
 
 /* The Modal (background) */
 .modal {
