--- a/views/allposts.handlebars
+++ b/views/allposts.handlebars
@@ -15,7 +15,7 @@
     {{/each}}
     {{log post}}
     <div id="addAdviceDiv">
-    <input class="advice-input" type="text" id="adviceInp{{post.id}}">
+    <textarea class="advice-input" type="text" id="adviceInp{{post.id}}"></textarea>
     <br/>
     <button data-id={{post.id}} id="addAdvice{{post.id}}" class="adviceBtn" >GIVE ADVICE</button>
     </div>
